# lodestone

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  EPICS.md  LICENSE  LODESTONE.md  README.md  ROADMAP.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  lodestone.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  accounts.py  activities.py  deps.py  health.py  journeys.py  recommendation.py
backend/app/atlas/: __init__.py  cache.py  edge.py  graph.py  importer.py  node.py  provider.py  relationship.py  validator.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: account.py  activity.py  journey.py  quest.py  requirements.py  skill.py
backend/app/repositories/: account.py  activity.py  journey.py  quest.py  skill.py
backend/app/requirements/: __init__.py  achievement_requirement.py  archaeology_mystery_requirement.py  area_requirement.py  base.py  boss_requirement.py  collection_log_requirement.py  combat_level_requirement.py  diary_requirement.py  item_requirement.py  player_owned_farm_requirement.py  ports_progress_requirement.py  quest_points_requirement.py  quest_requirement.py  research_requirement.py  skill_requirement.py  transport_unlock_requirement.py
backend/app/schemas/: account.py  activity.py  journey.py  recommendation.py  requirements.py
backend/app/services/: account.py  activity.py  journey.py  recommendation.py  requirement_evaluator.py
backend/requirements/: __init__.py
backend/tests/: test_atlas.py
(+54 files in other folders)
